fixed several issues with portfolio spacing and added new skills

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -62,3 +62,10 @@ button {
 textarea {
   resize: none;
 }
+
+.aboutMe {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
