--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,6 @@
 .main-footer {
-  background: #000;
+  // background: #000;
+  background: red;
   color: #fff;
   &__upper {
     display: flex;
